--- a/update-apt-packages.yaml
+++ b/update-apt-packages.yaml
@@ -23,4 +23,4 @@
         token: "{{ slack_token }}"
         msg: 'Reboot required on {{ inventory_hostname }}'
       delegate_to: localhost
-      #when: reboot_required.stat.exists 
+      when: reboot_required.stat.exists 
