--- a/update-diskspace.yaml
+++ b/update-diskspace.yaml
@@ -17,4 +17,4 @@
         token: "{{ slack_token }}"
         msg: 'Disk space on {{ inventory_hostname }} is above 80%!'
       delegate_to: localhost
-      when: disk_usage.stdout[:-1]|int > 80
+      #when: disk_usage.stdout[:-1]|int > 80
